<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/real_name"
            android:textColor="@color/black_text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/real_name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="90dp"
            android:background="@color/transparent"
            android:hint="@string/please_input_real_name"
            android:paddingBottom="3dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:textColor="@color/black_text"
            android:textSize="14sp" />

    </RelativeLayout>

    <View style="@style/HorizontalDivideLine" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/wechat_account_number"
            android:textColor="@color/black_text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/we_chat_account_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="90dp"
            android:background="@color/transparent"
            android:hint="@string/please_input_we_chat_account"
            android:paddingBottom="3dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:textColor="@color/black_text"
            android:textSize="14sp"
            android:visibility="visible" />

    </RelativeLayout>

    <View style="@style/HorizontalDivideLine" />

    <TextView
        android:id="@+id/submit_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_save_text_button_background"
        android:gravity="center"
        android:paddingBottom="11dp"
        android:paddingTop="11dp"
        android:text="@string/save_safely"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/note_one"
        android:textColor="@color/black_text"
        android:textSize="13sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/note_two"
        android:textColor="@color/black_text"
        android:textSize="13sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/note_three"
        android:textColor="@color/black_text"
        android:textSize="13sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/note_four"
        android:textColor="@color/black_text"
        android:textSize="13sp" />

</LinearLayout>