<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_E6000000">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@drawable/icon_back_white" />

        <!--分享-->
        <LinearLayout
            android:id="@+id/bottom_ll"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/share_to"
                android:textColor="@color/red_fc2c38"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/share_qun_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawablePadding="7dp"
                android:drawableTop="@drawable/share_wechat_qun"
                android:text="@string/we_chat_qun"
                android:textColor="@color/black_2e2e2e"
                android:textSize="14sp" />

        </LinearLayout>

        <!--描述-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottom_ll"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="120dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/qun_red_pack"
                android:contentDescription="@null" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_diff"
                    android:textColor="@color/yellow_ffee5e"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/get_now_big"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/high_get"
                android:textColor="@color/red_fc2c38"
                android:textSize="25sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>