<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/upload_iv"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:background="@drawable/upload_big"
            android:contentDescription="@null" />

        <FrameLayout
            android:id="@+id/upload_fl"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:background="@color/black_4d000000"
            android:visibility="gone">

            <com.yiliao.chat.view.MyProcessView
                android:id="@+id/process_pv"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/video_done_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/upload_done"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone" />

        </FrameLayout>

    </FrameLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray_divine_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/set_title"
            android:textColor="@color/black_text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/title_tv"
            android:background="@color/transparent"
            android:gravity="end"
            android:hint="@string/please_input_title"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@color/black_text"
            android:textColorHint="@color/gray_right_text"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray_divine_color" />

    <RelativeLayout
        android:id="@+id/charge_rl"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/set_money"
            android:textColor="@color/black_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/money_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:text="@string/zero"
            android:textColor="@color/black_text"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:id="@+id/v_one"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray_divine_color" />

    <TextView
        android:id="@+id/rule_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/money_des"
        android:textColor="@color/gray_right_text"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/submit_tv"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_report_text_button_background"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>